--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.body {
-    background-image: url("img/bg.png")
-        background-repeat: no-repeat;
+button{
+    font-family: 'Raleway', sans-serif;
+    
 }
